feat: 추천 코인 차트정보 제공