@@ -84,25 +84,40 @@ public class UserReactionCustomRepositoryImpl implements UserReactionCustomRepos
 
 	@Override
 	public List<ReactionTrendDataResponse> findReactionsTrendData(LocalDateTime startTime, int limit) {
+		// 좋아요 상위 코인
 		List<Tuple> topCoins = queryFactory
 			.select(coin.coinId, coin.coinTicker, coin.baseAsset)
 			.from(detectedCoin)
 			.join(detectedCoin.exchangeCoin, exchangeCoin)
 			.join(exchangeCoin.coin, coin)
 			.where(detectedCoin.detectedAt.goe(startTime)
-				.and(detectedCoin.likeCount.add(detectedCoin.dislikeCount).gt(0L)))
+				.and(detectedCoin.likeCount.gt(0L)))
 			.groupBy(coin.coinId, coin.coinTicker, coin.baseAsset)
-			.orderBy(detectedCoin.likeCount.add(detectedCoin.dislikeCount).sum().desc())
+			.orderBy(detectedCoin.likeCount.sum().desc())
 			.limit(limit)
 			.fetch();
 
-		return topCoins.stream()
+		// 싫어요 상위 코인
+		List<Tuple> bottomCoins = queryFactory
+			.select(coin.coinId, coin.coinTicker, coin.baseAsset)
+			.from(detectedCoin)
+			.join(detectedCoin.exchangeCoin, exchangeCoin)
+			.join(exchangeCoin.coin, coin)
+			.where(detectedCoin.detectedAt.goe(startTime)
+				.and(detectedCoin.dislikeCount.gt(0L)))
+			.groupBy(coin.coinId, coin.coinTicker, coin.baseAsset)
+			.orderBy(detectedCoin.dislikeCount.sum().desc())
+			.limit(limit)
+			.fetch();
+
+		// topCoins 처리
+		List<ReactionTrendDataResponse> topResults = topCoins.stream()
 			.map(coinTuple -> {
 				Long coinId = coinTuple.get(coin.coinId);
 				String coinTicker = coinTuple.get(coin.coinTicker);
 				String baseAsset = coinTuple.get(coin.baseAsset);
 
-				// Like 데이터 조회
+				// Like 데이터 조회 (topCoins에서)
 				List<Tuple> likeData = queryFactory
 					.select(
 						Expressions.stringTemplate("DATE_FORMAT({0}, '%Y-%m-%d %H:00:00')", detectedCoin.detectedAt),
@@ -119,7 +134,53 @@ public class UserReactionCustomRepositoryImpl implements UserReactionCustomRepos
 							.asc())
 					.fetch();
 
-				// Dislike 데이터 조회
+				// Like 데이터 처리
+				Map<String, Long> likeDataMap = likeData.stream()
+					.collect(Collectors.toMap(
+						tuple -> tuple.get(0, String.class),
+						tuple -> tuple.get(1, Long.class)));
+
+				// 시작 시간부터 현재 시간까지 모든 시간대 생성
+				LocalDateTime now = LocalDateTime.now();
+				List<ReactionTrendDataResponse.TrendDataPoint> likeTrendDataList = new ArrayList<>();
+
+				// 시간별 데이터 생성 및 누적 계산
+				long likeCumulativeSum = 0;
+				LocalDateTime current = startTime.withMinute(0).withSecond(0).withNano(0);
+
+				while (!current.isAfter(now)) {
+					String timeKey = current.toString().replace("T", " ") + ":00";
+					Long likeCount = likeDataMap.getOrDefault(timeKey, 0L);
+					likeCumulativeSum += likeCount;
+
+					likeTrendDataList.add(new ReactionTrendDataResponse.TrendDataPoint(current, likeCumulativeSum));
+
+					if (current.withMinute(0).withSecond(0).withNano(0)
+						.equals(now.withMinute(0).withSecond(0).withNano(0)) && now.getMinute() > 0) {
+						likeTrendDataList.add(new ReactionTrendDataResponse.TrendDataPoint(now, likeCumulativeSum));
+					}
+
+					current = current.plusHours(1);
+				}
+
+				return ReactionTrendDataResponse.builder()
+					.coinId(coinId)
+					.baseAsset(baseAsset)
+					.coinTicker(coinTicker)
+					.likeData(likeTrendDataList)
+					.dislikeData(new ArrayList<>()) // topCoins에서는 dislike 데이터 없음
+					.build();
+			})
+			.collect(Collectors.toList());
+
+		// bottomCoins 처리 추가
+		List<ReactionTrendDataResponse> bottomResults = bottomCoins.stream()
+			.map(coinTuple -> {
+				Long coinId = coinTuple.get(coin.coinId);
+				String coinTicker = coinTuple.get(coin.coinTicker);
+				String baseAsset = coinTuple.get(coin.baseAsset);
+
+				// Dislike 데이터 조회 (bottomCoins에서)
 				List<Tuple> dislikeData = queryFactory
 					.select(
 						Expressions.stringTemplate("DATE_FORMAT({0}, '%Y-%m-%d %H:00:00')", detectedCoin.detectedAt),
@@ -136,12 +197,6 @@ public class UserReactionCustomRepositoryImpl implements UserReactionCustomRepos
 							.asc())
 					.fetch();
 
-				// Like 데이터 처리
-				Map<String, Long> likeDataMap = likeData.stream()
-					.collect(Collectors.toMap(
-						tuple -> tuple.get(0, String.class),
-						tuple -> tuple.get(1, Long.class)));
-
 				// Dislike 데이터 처리
 				Map<String, Long> dislikeDataMap = dislikeData.stream()
 					.collect(Collectors.toMap(
@@ -150,27 +205,22 @@ public class UserReactionCustomRepositoryImpl implements UserReactionCustomRepos
 
 				// 시작 시간부터 현재 시간까지 모든 시간대 생성
 				LocalDateTime now = LocalDateTime.now();
-				List<ReactionTrendDataResponse.TrendDataPoint> likeTrendDataList = new ArrayList<>();
 				List<ReactionTrendDataResponse.TrendDataPoint> dislikeTrendDataList = new ArrayList<>();
 
-				// 시간별 데이터 생성 (현재 시점의 카운트 값 사용)
+				// 시간별 데이터 생성 및 누적 계산
+				long dislikeCumulativeSum = 0;
 				LocalDateTime current = startTime.withMinute(0).withSecond(0).withNano(0);
 
 				while (!current.isAfter(now)) {
 					String timeKey = current.toString().replace("T", " ") + ":00";
-					Long likeCount = likeDataMap.getOrDefault(timeKey, 0L);
 					Long dislikeCount = dislikeDataMap.getOrDefault(timeKey, 0L);
+					dislikeCumulativeSum += dislikeCount;
 
-					likeTrendDataList.add(new ReactionTrendDataResponse.TrendDataPoint(current, likeCount));
-					dislikeTrendDataList.add(new ReactionTrendDataResponse.TrendDataPoint(current, dislikeCount));
+					dislikeTrendDataList.add(new ReactionTrendDataResponse.TrendDataPoint(current, dislikeCumulativeSum));
 
-					// 마지막 시간이면 현재 시간도 추가
-					if (current.withMinute(0)
-						.withSecond(0)
-						.withNano(0)
+					if (current.withMinute(0).withSecond(0).withNano(0)
 						.equals(now.withMinute(0).withSecond(0).withNano(0)) && now.getMinute() > 0) {
-						likeTrendDataList.add(new ReactionTrendDataResponse.TrendDataPoint(now, likeCount));
-						dislikeTrendDataList.add(new ReactionTrendDataResponse.TrendDataPoint(now, dislikeCount));
+						dislikeTrendDataList.add(new ReactionTrendDataResponse.TrendDataPoint(now, dislikeCumulativeSum));
 					}
 
 					current = current.plusHours(1);
@@ -180,11 +230,17 @@ public class UserReactionCustomRepositoryImpl implements UserReactionCustomRepos
 					.coinId(coinId)
 					.baseAsset(baseAsset)
 					.coinTicker(coinTicker)
-					.likeData(likeTrendDataList)
+					.likeData(new ArrayList<>()) // bottomCoins에서는 like 데이터 없음
 					.dislikeData(dislikeTrendDataList)
 					.build();
 			})
-			.toList();
+			.collect(Collectors.toList());
+
+		// 두 결과 합치기
+		List<ReactionTrendDataResponse> result = new ArrayList<>();
+		result.addAll(topResults);
+		result.addAll(bottomResults);
+		return result;
 	}
 
 }
